<resources>
    <string name="app_name">SenaQuiz-GeekQuiz</string>
    <string name="tempo">00:00</string>
    <string name="n">nº.</string>
    <string name="pergunta"> Qual seu curso?</string>
    <string name="res1">Resposta 1</string>
    <string name="res2">Resposta 2</string>
    <string name="res3">Resposta 3</string>
    <string name="res4">Resposta 4</string>
    <string name="btnResponder">Responder</string>
</resources>